--- a/BlazorBootstrapWASA/Pages/Home.razor
+++ b/BlazorBootstrapWASA/Pages/Home.razor
@@ -1,7 +1,48 @@
 ﻿@page "/"
+@using System.Globalization
 
-<PageTitle>Home</PageTitle>
+<h1 class="mb-4">Witamy w demo Blazor z Bootstrapem!</h1>
 
-<h1>Hello, world!</h1>
+<p class="lead">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit libero a elit pulvinar, vel congue elit pulvinar.
+</p>
 
-Welcome to your new app.
+<p>
+    Sed sit amet sapien euismod, mattis ex ut, dictum risus. Vivamus vitae turpis eget arcu dignissim consequat.
+</p>
+
+<p>
+    Curabitur a malesuada nulla, a congue tellus. Integer convallis massa in erat tempus, id blandit nulla viverra.
+</p>
+
+<hr />
+
+<h3>Lista korzyści:</h3>
+<ul class="list-group mb-4">
+    <li class="list-group-item">Responsywny interfejs dzięki Bootstrap</li>
+    <li class="list-group-item">Motywy jasny i ciemny (przełącznik)</li>
+    <li class="list-group-item">Prosty layout Blazora</li>
+</ul>
+
+<h3>Dane przykładowe:</h3>
+<table class="table table-striped table-bordered">
+    <thead class="table-dark">
+        <tr>
+            <th>#</th>
+            <th>Nazwa</th>
+            <th>Wartość</th>
+            <th>Data</th>
+        </tr>
+    </thead>
+    <tbody>
+        @for (int i = 1; i <= 5; i++)
+        {
+            <tr>
+                <td>@i</td>
+                <td>Element @i</td>
+                <td>@($"{Random.Shared.Next(10, 1000)} zł")</td>
+                <td>@DateTime.Now.AddDays(-i).ToString("d", CultureInfo.CurrentCulture)</td>
+            </tr>
+        }
+    </tbody>
+</table>
