--- a/BlazorBootstrapWASA/Pages/Home.razor
+++ b/BlazorBootstrapWASA/Pages/Home.razor
@@ -2,6 +2,7 @@
 @using BlazorBootstrapWASA.Services
 @inject HttpClient Http
 @inject ThemeProvider ThemeProvider
+@inject IJSRuntime JS
 
 <h1>Lorem Ipsum</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed viverra, nisl at pulvinar porttitor, purus lectus vehicula odio, nec vehicula elit dui at massa.</p>
@@ -16,7 +17,7 @@
 }
 else
 {
-    <table class="table table-striped">
+    <table class="table table-striped theme-table">
         <thead>
             <tr>
                 <th>Date</th>
@@ -43,26 +44,28 @@ else
 
 <h2>More Info (Accordion)</h2>
 <div class="accordion mb-4" id="demoAccordion">
-  @for (int i = 1; i <= 3; i++)
-  {
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="heading@i">
-        <button class="accordion-button @(i != 1 ? "collapsed" : "")"
-                type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapse@i" aria-expanded="@(i==1)"
-                aria-controls="collapse@i">
-          Accordion Item #@i
-        </button>
-      </h2>
-      <div id="collapse@i" class="accordion-collapse collapse @(i==1 ? "show" : "")"
-           aria-labelledby="heading@i" data-bs-parent="#demoAccordion">
-        <div class="accordion-body">
-          This is the body of item #@i.
+    @for (int i = 1; i <= 3; i++)
+    {
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="heading@i">
+                <button class="accordion-button @(i != 1 ? "collapsed" : "")"
+                        type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapse@i" aria-expanded="@(i == 1 ? "true" : "false")"
+                        aria-controls="collapse@i">
+                    Accordion Item #@i
+                </button>
+            </h2>
+            <div id="collapse@i"
+                 class="accordion-collapse collapse @(i == 1 ? "show" : "")"
+                 aria-labelledby="heading@i" data-bs-parent="#demoAccordion">
+                <div class="accordion-body">
+                    This is the body of item #@i.
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  }
+    }
 </div>
+
 @* Bootstrap accordion usage :contentReference[oaicite:1]{index=1} *@
 
 <h2>Theme Cards</h2>
@@ -109,6 +112,7 @@ else
     void ApplyTheme(string themeName)
     {
         ThemeProvider.SetTheme($"theme-{themeName.ToLower()}.css");
+        JS.InvokeVoidAsync("setBootstrapTheme", themeName.ToLower());
     }
 
     public class WeatherData
