Change color according to material design theme

--- a/BlazorBootstrapWASA/Layout/MainLayout.razor
+++ b/BlazorBootstrapWASA/Layout/MainLayout.razor
@@ -75,17 +75,17 @@
         new("Mint", "mint", "linear-gradient(90deg, #26a69a 50%, #e0f2f1 50%)"),
         new("Cyan", "cyan", "linear-gradient(90deg, #00bcd4 50%, #e0f7fa 50%)"),
         new("Light Blue", "lightblue", "linear-gradient(90deg, #64b5f6 50%, #e3f2fd 50%)"),
-        new("Rose", "rose", "linear-gradient(90deg, #f06292 50%, #f8bbd0 50%)"),
+        new("Rose", "rose", "linear-gradient(90deg, #ec407a 50%, #f8bbd0 50%)"),
         new("Orange", "orange", "linear-gradient(90deg, #ffa726 50%, #fff3e0 50%)"),
         new("Light Green", "lightgreen", "linear-gradient(90deg, #aed581 50%, #f1f8e9 50%)"),
         new("Aqua", "aqua", "linear-gradient(90deg, #4dd0e1 50%, #e0f7fa 50%)"),
-        new("Sky", "sky", "linear-gradient(90deg, #90caf9 50%, #e3f2fd 50%)"),
+        new("Sky", "sky", "linear-gradient(90deg, #81d4fa 50%, #e3f2fd 50%)"),
         new("Burgundy", "burgundy", "linear-gradient(90deg, #ad1457 50%, #880c27 50%)"),
         new("Red", "red", "linear-gradient(90deg, #ef5350 50%, #c62828 50%)"),
         new("Dark Green", "darkgreen", "linear-gradient(90deg, #388e3c 50%, #1b5e20 50%)"),
         new("Teal", "teal", "linear-gradient(90deg, #009688 50%, #004d40 50%)"),
         new("Navy", "navy", "linear-gradient(90deg, #1976d2 50%, #0d133c 50%)"),
-        new("Violet", "violet", "linear-gradient(90deg, #8e24aa 50%, #4b206a 50%)"),
+        new("Violet", "violet", "linear-gradient(90deg, #7c4dff 50%, #4527a0 50%)"),
     };
 
     async Task SelectTheme(ThemeOption option)
